Fixed a layout bug

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -94,7 +94,7 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 1fr 8fr 1fr;
+  grid-template-rows: 1fr .5fr 8fr .5fr;
   gap: 4px;
 }
 
@@ -129,7 +129,7 @@ ul {
 }
 
 .sidebar {
-  grid-row: 2 / -1;
+  grid-row: 2 / -2;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   gap: 50px;
@@ -145,7 +145,11 @@ ul {
   align-items: center;
 }
 
+.article {
+  grid-column: 2;
+}
+
 .footer {
-  grid-row: -1;
+  grid-row: -2 / -1;
   grid-column: 1 / -1;
 }
